# canny-opencl

./: .gitignore  CMakeLists.txt  Makefile  README.md  autotimer.h  benchmark.cpp  benchmark.results.2011.MBP.txt  benchmark.results.2015.MBP.txt  benchmark.results.txt  canny-opencl.cpp  imageprocessor.cpp  imageprocessor.h  makepush
benchmark/: CMakeLists.txt  autotimer.cpp  autotimer.h  benchmark-suite.cpp  benchmark.cpp  benchmark.h
benchmarking/: CMakeLists.txt  autotimer.cpp  autotimer.h  benchmark-suite.cpp  benchmark.cpp  benchmark.h
demos/opencl/: .gitignore  Makefile  convolution.cpp  convolution_kernel.cl  hello_opencl.cl  hello_opencl.cpp  hello_world.cpp
demos/opencv/: Makefile  canny.cpp  open-image.cpp
image-processors/: CMakeLists.txt  cvimageprocessor.cpp  imageprocessor.cpp  imageprocessor.h  openclimageprocessor.cpp  openclimageprocessor.h  serialimageprocessor.cpp  serialimageprocessor.h
imageprocessors/: CMakeLists.txt  cvimageprocessor.cpp  cvimageprocessor.h  imageprocessor.cpp  imageprocessor.h  openclimageprocessor.cpp  openclimageprocessor.h  serialimageprocessor.cpp  serialimageprocessor.h
images/: .gitignore
kernels/: gaussian_kernel.cl  hyst_kernel.cl  hysthres_kernal.cl  non_max_supp_kernel.cl  sobel_kernel.cl
kernels/cpu/: gaussian_kernel.cl
kernels/gpu/: non_max_supp_kernel.cl
live-capture/: CMakeLists.txt  live-capture.cpp
src/: autotimer.cpp  autotimer.h  benchmark-suite.cpp  benchmark.cpp  benchmark.h  canny-opencl.cpp  cvimageprocessor.cpp  cvimageprocessor.h  imageprocessor.cpp  imageprocessor.h  openclimageprocessor.cpp  openclimageprocessor.h  serialimageprocessor.cpp  serialimageprocessor.h
src/benchmarking/: CMakeLists.txt  benchmark.cpp  benchmark.h
src/imageprocessors/: CMakeLists.txt  cvimageprocessor.h  openclimageprocessor.cpp  serialimageprocessor.cpp
src/kernels/cpu/: non_max_supp_kernel.cl
src/kernels/gpu/: sobel_kernel.cl
src/live-capture/: CMakeLists.txt  live-capture.cpp
tools/: fetch-images.sh
